@@ -54,6 +54,7 @@ Fixed bugs
 - read objective offset from ZIMPL files
 - Make sure that objective limit is disabled if not all variables are in the LP. If we would run into
   an objective limit in this case, the results of the LP solver are unclear.
+- fixed bug in reopt.c, which occured for bounds outside of current valid bounds
 
 Miscellaneous
 -------------
